# TaskForge

./: .gitignore  Cargo.toml  docker-compose.yml  output.txt  tasks.json
auth/core/: Cargo.toml
auth/core/src/api/: mod.rs
auth/core/src/api/auth/: login.rs
auth/core/src/api/users/: create.rs  get.rs
auth/dal/: Cargo.toml
auth/dal/migrations/: 20260407102729_initial-setup.sql
auth/dal/src/: lib.rs  migrations.rs
auth/dal/src/connections/: mod.rs  sqlx_postgres.rs
auth/dal/src/users/: descriptors.rs  schema.rs
auth/dal/src/users/transactions/: create.rs  get.rs
auth/kernel/: Cargo.toml
auth/kernel/src/: lib.rs
auth/kernel/src/api/users/: get.rs
auth/kernel/src/user_sessions/: schema.rs
auth/kernel/src/user_sessions/transactions/: get.rs  login.rs  mod.rs
auth/networking/: Cargo.toml
auth/networking/src/: extract_auth.rs  lib.rs  main.rs
auth/networking/src/api/: mod.rs
auth/networking/src/api/auth/: login.rs  logout.rs  mod.rs
auth/networking/src/api/users/: create.rs  get.rs  mod.rs
frontend/: esbuild.js  package-lock.json  package.json
frontend/public/: bundle.css  bundle.css.map  index.html
frontend/rust-interface/: Cargo.toml
frontend/rust-interface/src/: lib.rs
frontend/src/: App.css  index.tsx  login.css
frontend/src/api/: create.ts  delete.ts  get.ts  login.ts  update.ts  url.ts  utils.ts
frontend/src/components/: LoginForm.tsx  ToDoItem.tsx  createItemForm.tsx
frontend/src/interfaces/: toDoItems.ts
glue/: Cargo.toml
glue/src/: errors.rs  lib.rs  sql_command.rs  token.rs
glue/src/logger/: elastic_actor.rs  logger.rs  mod.rs
glue/src/logger/network_wrapper/: actix_web.rs
ingress/: .gitignore  Cargo.toml  index.html  tasks.json
ingress/scripts/: login.sh  run_server.sh
ingress/src/: main.rs
scripts/: basic_test.sh  run_test.sh  wait_for_database.sh
session-cache/: README.md
session-cache/cache-client/: Cargo.toml
session-cache/cache-client/src/: lib.rs
session-cache/cache-module/: Cargo.toml  Dockerfile
session-cache/cache-module/src/: lib.rs  user_session.rs
session-cache/cache-module/src/processes/: login.rs  logout.rs  mod.rs  update.rs
src/: main.rs
to-do/core/: Cargo.toml  tasks.json
to-do/core/src/: enums.rs  main.rs  structs.rs
to-do/core/src/api/basic_actions/: create.rs  delete.rs  get.rs  update.rs
to-do/dal/: Cargo.toml
to-do/dal/migrations/: 20260406051945_initial-setup.sql  20260409200350_adding_user_connection.sql.sql
to-do/dal/src/: json_file.rs  lib.rs  migrations.rs
to-do/dal/src/connections/: sqlx_postgres.rs
to-do/dal/src/to_do_items/: mod.rs  schema.rs
to-do/dal/src/to_do_items/transactions/: create.rs  delete.rs  get.rs  update.rs
to-do/networking/: Cargo.toml
to-do/networking/src/: main.rs
to-do/networking/src/api/basic_actions/: create.rs  delete.rs  get.rs  mod.rs  update.rs
to-do/scripts/: add_migration.sh  test_server_com.sh
