[package]
name = "eni_scheduler"
version = "0.1.0"
edition = "2024"

[dependencies]
rand = "0.10.0"
cargo-docs = "0.1.34"

[workspace]
resolver = "2"
members = ["auth/core", "auth/dal", "auth/kernel", "auth/networking","frontend/rust-interface","glue", "ingress", "session-cache/cache-client", "session-cache/cache-module", "to-do/core", "to-do/dal", "to-do/networking",]
