[package]
name = "glue"
version = "0.1.0"
edition = "2024"

[dependencies]
actix-web = { version= "4.13.0", optional = true }
serde = { version = "1.0.228", features = ["derive"]}
thiserror = "2.0.18"
futures = "0.3.32"
jsonwebtoken = {version = "10.3.0", features = ["rust_crypto"]}

[features]
actix =["actix-web"]