[package]
name = "ingress"
version = "0.1.0"
edition = "2024"

[dependencies]
rust-embed = "8.11.0"
mime_guess = "2.0.5"
actix-web = "4.13.0"
tokio = {version = "1.50.0", features = ["macros", "rt-multi-thread"]}
actix-cors = "0.7.1"
to_do_server = {path = "../to-do/networking", package = "to-do-networking-server"}
to-do-dal ={ path = "../to-do/dal", package = "to-do-dal", features = ["sqlx-postgres"]}
auth_server ={path = "../auth/networking", package = "auth-networking-server"}
auth-dal ={ path = "../auth/dal", package = "auth-dal"}
glue ={ path = "../glue"}