[package]
name = "auth-kernel"
version = "0.1.0"
edition = "2024"

[dependencies]
auth-core = {path = "../core", optional = true}
auth-dal = {path = "../dal"}
glue = {path= "../../glue"}
reqwest = {version = "0.13.2", optional = true, features = ["json"]}
cache-client = {path = "../../session-cache/cache-client"}

[features]
http = ["reqwest"]
core-postgres = ["auth-core"]