[package]
name = "to-do-core"
version = "0.1.0"
edition = "2024"

[dependencies]
clap ={ version = "4.5.60", features = ["derive"]}
serde = {version = "1.0.228", features = ["derive"]}
to-do-dal = {path = "../dal"}
glue = {path = "../../glue"}
auth-kernel = {path = "../../auth/kernel"}

[features]
json-file-storage = ["to-do-dal/json-file"]
default = ["json-file-storage"]
memory =["auth-kernel/core-postgres"]
http=["auth-kernel/http"]

[dev-dependencies]
tokio = {version = "1.50.0", features = ["full"]}