[package]
name = "to-do-dal"
version = "0.1.0"
edition = "2024"



[dependencies]
# for json-file
serde_json = {version = "1.0.149", optional = true}
serde = {version = "1.0.228", optional = true}
glue = {path = "../../glue"}

# for sqlx-postgres
sqlx = {version = "0.8.6", features = ["postgres", "json"], optional = true}

[features]
json-file = ["serde_json", "serde"]
sqlx-postgres = ["sqlx"]