[package]
name = "to-do-dal"
version = "0.1.0"
edition = "2024"



[dependencies]
serde = {version = "1.0.228", features = ["derive"]}
glue = {path = "../../glue"}

# for json-file
serde_json = {version = "1.0.149", optional = true}

# for sqlx-postgres
sqlx = {version = "0.8.6", features = ["postgres", "json", "runtime-tokio"], optional = true}

[features]
json-file = ["serde_json"]
sqlx-postgres = ["sqlx"]
default = ["sqlx-postgres"]

[dev-dependencies]
tokio = {version = "1.52.1", features = ["full"]}