[package]
name = "to-do-networking-server"
version = "0.1.0"
edition = "2024"



[dependencies]
actix-web = "4.13.0"
tokio = {version = "1.50.0", features = ["full"]}
to-do-core = { path = "../core"}
glue = { path = "../../glue", features = ["actix"]}
serde = {version = "1.0.228", features = ["derive"]}
to-do-dal = {path = "../dal", features = ["sqlx-postgres"]}




