[package]
name = "to-do-networking-server"
version = "0.1.0"
edition = "2024"



[dependencies]
actix-web = "4.13.0"
tokio = {version = "1.50.0", features = ["full"]}
to-do-core = { path = "../core"}
glue = { path = "../../glue", features = ["actix", "elastic-logger"]}
serde = {version = "1.0.228", features = ["derive"]}
to-do-dal = {path = "../dal", features = ["sqlx-postgres"]}
actix-cors = "0.7.1"

auth-kernel = {path = "../../auth/kernel"}

[features]
auth-http = ["auth-kernel/http"]
auth-core-postgres = ["auth-kernel/core-postgres"]
default = ["auth-core-postgres"]

[dev-dependencies]
serde_json = "1.0.149"
actix-http = "3.12.1"